Speed limit, collision, use lodash

--- a/simu2.html
+++ b/simu2.html
@@ -4,6 +4,7 @@
 </head>
 <body>
     <script src="math.min.js"></script>
+    <script src="lodash.min.js"></script>
     <script src="equations.js"></script>
     <script>
         function elementDim(e) {
